Fixed lots of CSS/wrapping issues

--- a/cases/static/css/bootstrap.css
+++ b/cases/static/css/bootstrap.css
@@ -104,3 +104,8 @@ ul.messages li.error {
 .breadcrumb {
     padding: 2px 15px;
 }
+
+/*@page {
+    size: auto;
+}
+*/
